Fix/Structure Folder

--- a/src/main/resources/templates/adminDashboard/fragments/showMore.html
+++ b/src/main/resources/templates/adminDashboard/fragments/showMore.html
@@ -1,4 +1,4 @@
-<div th:fragment="showMore">
+<div class="container-fluid" th:fragment="showMore">
     <h2 class="mb-0">Category detail : <strong th:text="${category.name}"></strong></h2>
     </h2>
 
