--- a/src/main/resources/templates/adminDashBoard/fragments/accountContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/accountContent.html
@@ -49,6 +49,8 @@
         }
     </style>
 
+    <h2 th:text="${accNamePage}">Management <b>Account</b></h2>
+
     <div class="stats-container">
         <div class="stats-card">
             <div class="stats-icon bg-opacity-10 text-primary">
@@ -95,21 +97,21 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-md-8">
-                            <h2 th:text="${accNamePage}">Management <b>Account</b></h2>
+                            <div id="addAccountBtnContainer"  style="display: none;">
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addModal">
+                                    Add New Account
+                                </button>
+                            </div>
                         </div>
                         <div class="col-md-4">
                             <div class="search-box">
-                                <i class="material-icons">&#xE8B6;</i>
+                                <i class="fas fa-search fs-6 text-primary"></i>
                                 <input type="text" id="searchInput" name="keyword" class="form-control"
                                        placeholder="Search…" th:value="${keyword}">
                             </div>
                         </div>
                         <div class="col-md-10"></div>
-                        <div id="addAccountBtnContainer" class="col-md-2 text-right mt-4" style="display: none;">
-                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addModal">
-                                Add New Account
-                            </button>
-                        </div>
+
                     </div>
 
                 </div>
@@ -243,16 +245,16 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <form>
-                            <div class="modal-header">
-                                <h4 class="modal-title">Block Account</h4>
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                            <div class="modal-header d-flex justify-content-between align-items-center">
+                                <h5 class="modal-title mb-0">Block Account</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
                                 <h6>Are you sure you want to block this account?</h6>
                                 <p class="text-warning">This action cannot be undone !!</p>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                 <a id="confirmDelete" class="btn btn-danger" href="#">Block</a>
                             </div>
                         </form>
@@ -298,7 +300,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/accountJS.js}"></script>
 
     <script>
