--- a/src/main/resources/templates/adminDashBoard/fragments/header.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/header.html
@@ -1,11 +1,11 @@
 <head th:fragment="header">
-    <title>Eduport- LMS, Education and Course Theme</title>
+    <title>Eduport</title>
 
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="StackBros">
-    <meta name="description" content="Eduport- LMS, Education and Course Theme">
+    <meta name="description" content="Eduport">
 
     <!-- Dark mode -->
     <script>
@@ -30,7 +30,7 @@
 
         window.addEventListener('DOMContentLoaded', () => {
             var el = document.querySelector('.theme-icon-active');
-            if(el != 'undefined' && el != null) {
+            if (el != 'undefined' && el != null) {
                 const showActiveTheme = theme => {
                     const activeThemeIcon = document.querySelector('.theme-icon-active use')
                     const btnToActive = document.querySelector(`[data-bs-theme-value="${theme}"]`)
@@ -73,16 +73,17 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&amp;family=Roboto:wght@400;500;700&amp;display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&amp;family=Roboto:wght@400;500;700&amp;display=swap">
 
     <!-- Plugins CSS -->
     <link rel="stylesheet" type="text/css" th:href="@{/assets/vendor/font-awesome/css/all.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/vendor/bootstrap-icons/bootstrap-icons.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/vendor/apexcharts/css/apexcharts.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/vendor/overlay-scrollbar/css/overlayscrollbars.min.css}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- Theme CSS -->
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/style.css}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
