--- a/src/main/resources/templates/adminDashBoard/fragments/topbar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/topbar.html
@@ -5,8 +5,10 @@
             <!-- Logo START -->
             <div class="d-flex align-items-center d-xl-none">
                 <a class="navbar-brand" href="index.html">
-                    <img class="light-mode-item navbar-brand-item h-30px" th:src="@{/assets/images/logo-mobile.svg}" alt="">
-                    <img class="dark-mode-item navbar-brand-item h-30px" th:src="@{/assets/images/logo-mobile-light.svg}"
+                    <img class="light-mode-item navbar-brand-item h-30px" th:src="@{/assets/images/logo-mobile.svg}"
+                         alt="">
+                    <img class="dark-mode-item navbar-brand-item h-30px"
+                         th:src="@{/assets/images/logo-mobile-light.svg}"
                          alt="">
                 </a>
             </div>
@@ -170,23 +172,29 @@
                         <a class="avatar avatar-sm p-0" href="#" id="profileDropdown" role="button"
                            data-bs-auto-close="outside" data-bs-display="static" data-bs-toggle="dropdown"
                            aria-expanded="false">
-                            <img class="avatar-img rounded-circle" th:src="@{/assets/images/avatar/01.jpg}" alt="avatar">
+                            <img class="avatar-img rounded-circle" th:src="${#authentication.principal.profilePicture}"
+                                 alt="avatar">
                         </a>
 
                         <!-- Profile dropdown START -->
                         <ul class="dropdown-menu dropdown-animation dropdown-menu-end shadow pt-3"
+                            sec:authorize="isAuthenticated()"
                             aria-labelledby="profileDropdown">
                             <!-- Profile info -->
                             <li class="px-3">
                                 <div class="d-flex align-items-center">
                                     <!-- Avatar -->
                                     <div class="avatar me-3 mb-3">
-                                        <img class="avatar-img rounded-circle shadow" th:src="@{/assets/images/avatar/01.jpg}"
+                                        <img class="avatar-img rounded-circle shadow" th:src="${#authentication.principal.profilePicture != null} ?
+                                                                                             ${#authentication.principal.profilePicture} :
+                                                                                             @{/assets/images/avatar/01.jpg}"
                                              alt="avatar">
                                     </div>
                                     <div>
-                                        <a class="h6 mt-2 mt-sm-0" href="#">Lori Ferguson</a>
-                                        <p class="small m-0">example@gmail.com</p>
+                                        <p class="h6 mt-2 mt-sm-0" th:text="${#authentication.principal.fullName}">Lori
+                                            Ferguson</p>
+                                        <p class="small m-0" th:text="${#authentication.getName()}">
+                                            example@gmail.com</p>
                                     </div>
                                 </div>
                             </li>
@@ -200,7 +208,7 @@
                             </li>
                             <li><a class="dropdown-item" href="#"><i class="bi bi-info-circle fa-fw me-2"></i>Help</a>
                             </li>
-                            <li><a class="dropdown-item bg-danger-soft-hover" href="#"><i
+                            <li><a class="dropdown-item bg-danger-soft-hover" th:href="@{/logout}"><i
                                     class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
                             <li>
                                 <hr class="dropdown-divider">
