feature/add greeting message to home page and update meta tags in header

--- a/src/main/resources/templates/homePage/fragments/header.html
+++ b/src/main/resources/templates/homePage/fragments/header.html
@@ -1,11 +1,11 @@
 <head th:fragment="header">
-    <title>Eduport - LMS, Education and Course Theme</title>
+    <title>OLearning - LMS, Education and Course Theme</title>
 
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="StackBros">
-    <meta name="description" content="Eduport- LMS, Education and Course Theme">
+    <meta name="author" content="OLearning">
+    <meta name="description" content="OLearning- LMS, Education and Course Theme">
 
     <!-- Dark mode -->
     <script>
@@ -74,7 +74,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&amp;family=Roboto:wght@400;500;700&amp;display=swap">
+        href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&amp;family=Roboto:wght@400;500;700&amp;display=swap">
 
     <!-- Plugins CSS -->
     <link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/all.min.css">
