--- a/src/main/resources/templates/homePage/index.html
+++ b/src/main/resources/templates/homePage/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<!-- Mirrored from stackbros.in/eduport/landing/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jun 2025 07:30:18 GMT -->
 
-<div th:replace="homePage/fragments/header :: header"></div>
+
+<div th:replace="~{homePage/fragments/header :: header}"></div>
 
 <body>
 
 	<!-- Header START -->
-	<div th:replace="homePage/fragments/navHeader :: navHeader"></div>
+	<div th:replace="~{homePage/fragments/navHeader :: navHeader}"></div>
 	<!-- Header END -->
 
 	<!-- **************** MAIN CONTENT START **************** -->
-	<div th:replace="homePage/fragments/mainContent :: mainContent"></div>
+	<div th:replace="~{homePage/fragments/mainContent :: mainContent}"></div>
 	<!-- **************** MAIN CONTENT END **************** -->
 
 	<!-- =======================
 Footer START -->
-	<div th:replace="homePage/fragments/footer :: footer"></div>
+	<div th:replace="~{homePage/fragments/footer :: footer}"></div>
 	<!-- =======================
 Footer END -->
 
@@ -37,6 +37,6 @@ Footer END -->
 
 </body>
 
-<!-- Mirrored from stackbros.in/eduport/landing/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jun 2025 07:31:00 GMT -->
+
 
 </html>
