--- a/src/main/resources/templates/adminDashBoard/fragments/accountContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/accountContent.html
@@ -127,13 +127,13 @@
                             </li>
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link" id="instructor-tab" data-bs-toggle="tab"
-                                        data-bs-target="#instructor" type="button" role="tab" data-role="2">
+                                        data-bs-target="#instructor" type="button" role="tab" data-role="3">
                                     <i class="bi bi-person-badge me-2"></i>Instructor
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link" id="user-tab" data-bs-toggle="tab"
-                                        data-bs-target="#user" type="button" role="tab" data-role="3">
+                                        data-bs-target="#user" type="button" role="tab" data-role="2">
                                     <i class="bi bi-people me-2"></i>User
                                 </button>
                             </li>
@@ -215,7 +215,7 @@
                         <div class="hint-text">
                             Showing <b th:text="${listU.size()}"></b> out of <b th:text="${totalItems}"></b> entries
                         </div>
-                        <ul class="pagination">
+                        <ul class="pagination pagination-soft rounded justify-content-end">
                             <!-- Nút Previous -->
                             <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
                                 <a class="page-link" th:data-page="${currentPage - 1}" href="#"><i
