--- a/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
@@ -58,7 +58,7 @@
             <td th:text="${order.role} ?: 'N/A'"></td>
             <td>
               <a th:href="@{/admin/orders/view/{orderId}(orderId=${order.orderId})}"
-                 class="btn btn-info btn-sm w-50" title="View Detail"><i class="fas fa-eye"></i></a>
+                 class="btn btn-info btn-sm" title="View Detail"><i class="fas fa-eye"></i></a>
             </td>
           </tr>
           </tbody>
