--- a/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/sidebar.html
@@ -31,18 +31,27 @@
                 </li>
 
                 <!-- Menu item 3 -->
+                <li class="nav-item">
+                    <a class="nav-link" data-bs-toggle="collapse" href="#collapseinstructors" role="button"
+                       aria-expanded="true" aria-controls="collapseinstructors">
+                        <i class="fas fa-user-tie fa-fw me-2"></i><span>Instructors</span>
+                    </a>
+                    <ul class="nav collapse flex-column show" id="collapseinstructors" data-bs-parent="#navbar-sidebar">
+                        <li class="nav-item"><a class="nav-link active"
+                                                th:href="@{/admin/mnInstructors}">Instructors</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/admin/mnInstructors/request}">Instructor requests
+                                <!-- <span class="badge text-bg-success rounded-circle ms-2">2</span>-->
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
+                <!-- Menu item 4 -->
                 <li class="nav-item"><a class="nav-link" th:href="@{/admin/course}">
                     <i class="fas fa-fw fa-trophy"></i>
                     <span>Courses</span>
                 </a></li>
-
-<!--                &lt;!&ndash; Menu item 4 &ndash;&gt;-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" th:href="@{/admin/categories}">-->
-<!--                        <i class="fas fa-fw fa-list"></i>-->
-<!--                        <span>Categories</span>-->
-<!--                    </a>-->
-<!--                </li>-->
 
                 <!-- Menu item 5 -->
                 <li class="nav-item">
