--- a/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent.html
@@ -656,17 +656,17 @@
       background-color: #f8f9fa;
     }
 
-    /*.sidebar {*/
-    /*  width: var(--sidebar-width);*/
-    /*  position: fixed;*/
-    /*  top: 0;*/
-    /*  left: 0;*/
-    /*  min-height: 1000vh;*/
-    /*  !*z-index: 1000;*!*/
-    /*  background-color: #212529;*/
-    /*  !*padding-top: 56px;*!*/
-    /*  transition: all 0.3s;*/
-    /*}*/
+    .sidebar {
+      width: var(--sidebar-width);
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-height: 1000vh;
+      z-index: 1000;
+      background-color: #212529;
+      padding-top: 56px;
+      transition: all 0.3s;
+    }
 
     .sidebar .nav-link {
       color: rgba(255, 255, 255, 0.75);
