--- a/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
@@ -2,7 +2,7 @@
 
   <!-- Navbar brand for xl START -->
   <div class="d-flex align-items-center">
-    <a class="navbar-brand" th:href="@{/admin}">
+    <a class="navbar-brand" th:href="@{/instructordashboard}">
       <img class="navbar-brand-item" th:src="@{/assets/images/logo-light.svg}" alt="">
     </a>
   </div>
@@ -16,33 +16,29 @@
       <ul class="navbar-nav flex-column" id="navbar-sidebar">
 
         <!-- Menu item 1 -->
-        <li class="nav-item"><a th:href="@{/admin}" class="nav-link active"><i
+        <li class="nav-item"><a th:href="@{/instructordashboard}" class="nav-link active"><i
                 class="bi bi-house fa-fw me-2"></i>Dashboard</a></li>
 
         <!-- Title -->
         <li class="nav-item ms-2 my-2">Pages</li>
 
         <!-- menu item 2 -->
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/admin/account}">
-            <i class="fas fa-fw fa-user"></i>
-            <span>Accounts</span>
-          </a>
-        </li>
 
         <!-- Menu item 3 -->
-        <li class="nav-item"><a class="nav-link" th:href="@{/admin/course}">
+
+
+        <!-- Menu item 4 -->
+        <li class="nav-item"><a class="nav-link" th:href="@{/instructordashboard/viewcourse}">
           <i class="fas fa-fw fa-trophy"></i>
           <span>Courses</span>
         </a></li>
 
-        <!--                &lt;!&ndash; Menu item 4 &ndash;&gt;-->
-        <!--                <li class="nav-item">-->
-        <!--                    <a class="nav-link" th:href="@{/admin/categories}">-->
-        <!--                        <i class="fas fa-fw fa-list"></i>-->
-        <!--                        <span>Categories</span>-->
-        <!--                    </a>-->
-        <!--                </li>-->
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/admin/category}">
+            <i class="fas fa-list"></i>
+            <span>Categories</span>
+          </a>
+        </li>
 
         <!-- Menu item 5 -->
         <li class="nav-item">
