--- a/src/main/resources/templates/homePage/fragments/topCourse.html
+++ b/src/main/resources/templates/homePage/fragments/topCourse.html
@@ -1,10 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="tiny-slider-inner pb-1" data-autoplay="true" data-arrow="true" data-edge="2" data-dots="false"
+    data-items="3" data-items-lg="2" data-items-sm="1" th:fragment="topCourse">
+
+    <div th:each="course : ${topCourses}">
+        <div class="card action-trigger-hover border bg-transparent">
+            <img th:src="@{/assets/images/courses/4by3/14.jpg}" class="card-img-top" alt="course image"
+                th:alt="${course.title}">
+
+            <div class="card-body pb-0">
+                <div class="d-flex justify-content-between mb-3">
+                    <span class="hstack gap-2">
+                        <a href="#" class="badge bg-primary bg-opacity-10 text-primary"
+                            th:text="${course.category.name}">Design</a>
+                        <a href="#" class="badge text-bg-dark">All level</a>
+                    </span>
+                    <a href="#" class="h6 fw-light mb-0"><i class="far fa-bookmark"></i></a>
+                </div>
+                <h5 class="card-title"><a href="#" th:text="${course.title}">Course Title</a></h5>
+                <div class="d-flex justify-content-between mb-2">
+                    <div class="hstack gap-2">
+                        <p class="text-warning m-0">4.5<i class="fas fa-star text-warning ms-1"></i></p>
+                        <span class="small" th:text="'(' + ${course.totalRatings} + ')'">(2000)</span>
+                    </div>
+                    <div class="hstack gap-2">
+                        <p class="h6 fw-light mb-0 m-0" th:text="${course.totalStudentEnrolled}">8000</p>
+                        <span class="small">(Student)</span>
+                    </div>
+                </div>
+                <div class="hstack gap-3">
+                    <span class="h6 fw-light mb-0">
+                        <i class="far fa-clock text-danger me-2"></i><span th:text="${course.duration} + 'h'">12h</span>
+                    </span>
+                    <span class="h6 fw-light mb-0">
+                        <i class="fas fa-table text-orange me-2"></i><span
+                            th:text="${course.totalLessons} + ' lectures'">50 lectures</span>
+                    </span>
+                </div>
+            </div>
+            <div class="card-footer pt-0 bg-transparent">
+                <hr>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex align-items-center">
+                        <div class="avatar avatar-sm">
+                            <img class="avatar-img rounded-1" th:src="@{/assets/images/avatar/10.jpg}" alt="avatar">
+                        </div>
+                        <p class="mb-0 ms-2">
+                            <a href="#" class="h6 fw-light mb-0" th:text="${course.instructor.fullName}">Instructor</a>
+                        </p>
+                    </div>
+                    <div>
+                        <h4 class="text-success mb-0 item-show"
+                            th:text="${course.price == 0 ? 'Free' : '$' + course.price}">Free</h4>
+                        <a href="#" class="btn btn-sm btn-success-soft item-show-hover">
+                            <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
