--- a/src/main/resources/templates/instructorDashboard/CourseDetail.html
+++ b/src/main/resources/templates/instructorDashboard/CourseDetail.html
@@ -145,41 +145,137 @@
                                 </div>
                             </div>
 
+<!--                            <div class="col-lg-4">-->
+<!--                                <div class="content-card">-->
+<!--                                    <h3>Course Details</h3>-->
+<!--                                    <ul class="list-group list-group-flush">-->
+<!--                                        <li class="list-group-item d-flex justify-content-between align-items-center">-->
+<!--                                            <span><i class="bi bi-tag me-2"></i> Category</span>-->
+<!--                                            <span  th:utext="${course.category.name}"></span>-->
+<!--                                        </li>-->
+<!--                                        <li class="list-group-item d-flex justify-content-between align-items-center">-->
+<!--                                            <span><i class="bi bi-clock me-2"></i> Duration</span>-->
+<!--                                            <span  th:utext="${course.duration}"></span>-->
+<!--                                        </li>-->
+<!--                                        <li class="list-group-item d-flex justify-content-between align-items-center">-->
+<!--                                            <span><i class="bi bi-collection-play me-2"></i> Lessons</span>-->
+<!--                                            <span  th:utext="${course.totalLessons}"></span>-->
+<!--                                        </li>-->
+<!--                                        <li class="list-group-item d-flex justify-content-between align-items-center">-->
+<!--                                            <span><i class="bi bi-star me-2"></i> Rating</span>-->
+<!--                                            <span>4.5/5</span>-->
+<!--                                        </li>-->
+<!--                                        <li class="list-group-item d-flex justify-content-between align-items-center">-->
+<!--                                            <span><i class="bi bi-people me-2"></i> Students</span>-->
+<!--                                            <span>256</span>-->
+<!--                                        </li>-->
+<!--                                        <li class="list-group-item d-flex justify-content-between align-items-center">-->
+<!--                                            <span><i class="bi bi-currency-dollar me-2"></i> Price</span>-->
+<!--                                            <span  th:utext="${course.price}"></span>-->
+<!--                                        </li>-->
+<!--                                        <li class="list-group-item d-flex justify-content-between align-items-center">-->
+<!--                                            <span><i class="bi bi-percent me-2"></i> Discount</span>-->
+<!--                                            <span>0%</span>-->
+<!--                                        </li>-->
+<!--                                    </ul>-->
+<!--                                </div>-->
+<!--                            </div>-->
                             <div class="col-lg-4">
-                                <div class="content-card">
-                                    <h3>Course Details</h3>
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <span><i class="bi bi-tag me-2"></i> Category</span>
-                                            <span  th:utext="${course.category.name}"></span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <span><i class="bi bi-clock me-2"></i> Duration</span>
-                                            <span  th:utext="${course.duration}"></span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <span><i class="bi bi-collection-play me-2"></i> Lessons</span>
-                                            <span  th:utext="${course.totalLessons}"></span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <span><i class="bi bi-star me-2"></i> Rating</span>
-                                            <span>4.5/5</span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <span><i class="bi bi-people me-2"></i> Students</span>
-                                            <span>256</span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <span><i class="bi bi-currency-dollar me-2"></i> Price</span>
-                                            <span  th:utext="${course.price}"></span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <span><i class="bi bi-percent me-2"></i> Discount</span>
-                                            <span>0%</span>
-                                        </li>
-                                    </ul>
-                                </div>
+                                <div class="row mb-5 mb-lg-0">
+                                    <div class="col-md-6 col-lg-12">
+                                        <!-- Video START -->
+                                        <div class="card p-2 mb-4 z-index-9">
+                                            <div class="overflow-hidden rounded-3">
+                                                <img src="assets/images/courses/4by3/01.jpg" class="card-img" alt="course image">
+                                                <!-- Overlay -->
+                                                <div class="bg-overlay bg-dark opacity-6"></div>
+                                                <div class="card-img-overlay d-flex align-items-start flex-column p-3">
+                                                    <!-- Video button and link -->
+                                                    <div class="m-auto">
+                                                        <a href="https://www.youtube.com/embed/tXHviS-4ygo" class="btn btn-lg text-danger btn-round btn-white-shadow mb-0" data-glightbox="" data-gallery="course-video">
+                                                            <i class="fas fa-play"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <!-- Card body -->
+                                            <div class="card-body px-3">
+                                                <!-- Info -->
+                                                <div class="d-flex justify-content-between align-items-center">
+                                                    <!-- Price and time -->
+                                                    <div>
+                                                        <div class="d-flex align-items-center">
+                                                            <h3 class="fw-bold mb-0 me-2">$150</h3>
+                                                            <span class="text-decoration-line-through mb-0 me-2">$350</span>
+                                                            <span class="badge text-bg-orange mb-0">60% off</span>
+                                                        </div>
+                                                        <p class="mb-0 text-danger"><i class="fas fa-stopwatch me-2"></i>5 days left at this price</p>
+                                                    </div>
+
+                                                    <!-- Share button with dropdown -->
+                                                    <div class="dropdown">
+                                                        <!-- Share button -->
+                                                        <a href="#" class="btn btn-sm btn-light rounded small" role="button" id="dropdownShare" data-bs-toggle="dropdown" aria-expanded="false">
+                                                            <i class="fas fa-fw fa-share-alt"></i>
+                                                        </a>
+                                                        <!-- dropdown button -->
+                                                        <ul class="dropdown-menu dropdown-w-sm dropdown-menu-end min-w-auto shadow rounded" aria-labelledby="dropdownShare">
+                                                            <li><a class="dropdown-item" href="#"><i class="fab fa-twitter-square me-2"></i>Twitter</a></li>
+                                                            <li><a class="dropdown-item" href="#"><i class="fab fa-facebook-square me-2"></i>Facebook</a></li>
+                                                            <li><a class="dropdown-item" href="#"><i class="fab fa-linkedin me-2"></i>LinkedIn</a></li>
+                                                            <li><a class="dropdown-item" href="#"><i class="fas fa-copy me-2"></i>Copy link</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+
+                                                <!-- Buttons -->
+                                                <div class="mt-3 d-sm-flex justify-content-sm-between">
+                                                    <a href="#" class="btn btn-outline-primary mb-0">Free trial</a>
+                                                    <a href="#" class="btn btn-success mb-0">Buy course</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- Video END -->
+
+                                        <!-- Course info START -->
+                                        <div class="card card-body p-4 mb-4">
+                                            <!-- Title -->
+                                            <h4 class="mb-3">This course includes</h4>
+                                            <ul class="list-group list-group-borderless">
+                                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                    <span class="h6 fw-light mb-0"><i class="fas fa-fw fa-book-open text-primary"></i>Lectures</span>
+                                                    <span>30</span>
+                                                </li>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                    <span class="h6 fw-light mb-0"><i class="fas fa-fw fa-clock text-primary"></i>Duration</span>
+                                                    <span>4h 50m</span>
+                                                </li>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                    <span class="h6 fw-light mb-0"><i class="fas fa-fw fa-signal text-primary"></i>Skills</span>
+                                                    <span>Beginner</span>
+                                                </li>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                    <span class="h6 fw-light mb-0"><i class="fas fa-fw fa-globe text-primary"></i>Language</span>
+                                                    <span>English</span>
+                                                </li>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                    <span class="h6 fw-light mb-0"><i class="fas fa-fw fa-user-clock text-primary"></i>Deadline</span>
+                                                    <span>Nov 30 2021</span>
+                                                </li>
+                                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                                    <span class="h6 fw-light mb-0"><i class="fas fa-fw fa-medal text-primary"></i>Certificate</span>
+                                                    <span>Yes</span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <!-- Course info END -->
+                                    </div>
+
+
+                                </div><!-- Row End -->
                             </div>
+
                         </div>
                     </div>
 
