--- a/src/main/resources/templates/instructorDashboard/fragments/Step2CourseMedia.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/Step2CourseMedia.html
@@ -104,6 +104,11 @@
                     <!-- Step 2 button -->
 
                 </div>
+
+                <!-- SCRIPT: Save preview in sessionStorage -->
+
+
+
             </div>
                 <div class="content-card">
                     <div class="d-flex justify-content-between">
