--- a/src/main/resources/templates/adminDashBoard/fragments/instructorListContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/instructorListContent.html
@@ -160,7 +160,7 @@
                             <thead>
                             <tr>
                                 <th scope="col" class="border-0 rounded-start">Instructor name</th>
-                                <th scope="col" class="border-0">Detail</th>
+                                <th scope="col" class="border-0">PersonalSkillPersonalSkill</th>
                                 <th scope="col" class="border-0">Courses</th>
                                 <th scope="col" class="border-0">Total studentss</th>
                                 <th scope="col" class="border-0 rounded-end">Action</th>
