--- a/src/main/resources/templates/adminDashBoard/fragments/topbar.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/topbar.html
@@ -208,12 +208,11 @@
                             </li>
                             <li><a class="dropdown-item" href="#"><i class="bi bi-info-circle fa-fw me-2"></i>Help</a>
                             </li>
-                            <li><a class="dropdown-item bg-danger-soft-hover" th:href="@{/logout}"><i
+                            <li><a class="dropdown-item bg-danger-soft-hover" data-bs-toggle="modal" data-bs-target="#logoutModal"><i
                                     class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-
                             <!-- Dark mode options START -->
                             <li>
                                 <div class="bg-light dark-mode-switch theme-icon-active d-flex align-items-center p-1 rounded mt-2">
