--- a/src/main/resources/templates/instructorDashboard/fragments/CoursesContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/CoursesContent.html
@@ -70,6 +70,7 @@
                             <tr>
                                 <th scope="col" class="border-0 rounded-start">Course Title</th>
                                 <th scope="col" class="border-0">Category Name</th>
+                                <th scope="col" class="border-0">Course Level</th>
                                 <th scope="col" class="border-0">Enrolled</th>
                                 <th scope="col" class="border-0">Status</th>
                                 <th scope="col" class="border-0">Price</th>
@@ -92,7 +93,8 @@
                                         <div class="mb-0 ms-2">
                                             <!-- Title -->
                                             <h6>
-                                                <a th:href="@{|/instructordashboard/courses/detail/${course.courseId}|}" th:utext="${course.title}"></a>
+                                                <a th:href="@{|/instructordashboard/courses/detail/${course.courseId}|}"
+                                                   th:utext="${course.title}"></a>
                                             </h6>
                                             <!-- Info -->
                                             <div class="d-sm-flex">
@@ -109,21 +111,22 @@
                                     <span class="badge bg-primary text-white rounded-pill"
                                           th:text="${course.categoryName}"></span>
                                 </td>
+                                <td>
+                                    <span class="badge bg-success bg-opacity-10 text-success"
+                                          th:text="${course.courseLevel}"></span>
+                                </td>
                                 <!-- Enrolled item -->
                                 <td class="text-center text-sm-start">0</td>
                                 <!-- Status item -->
                                 <td>
                                     <div th:switch="${course.status}">
-                                                            <span th:case="'draft'"
-                                                                  class="badge bg-secondary">Draft</span>
+                                        <span th:case="null" class="badge bg-secondary">Draft</span>
                                         <span th:case="'published'" class="badge bg-success">Published</span>
-                                        <span th:case="'pending'"
-                                              class="badge bg-warning text-dark">Pending</span>
-                                        <span th:case="'rejected'"
-                                              class="badge bg-danger">Rejected</span>
-                                        <span th:case="*">Unknown</span>
+                                        <span th:case="'pending'" class="badge bg-warning text-dark">Pending</span>
+                                        <span th:case="'rejected'" class="badge bg-danger">Rejected</span>
                                     </div>
                                 </td>
+
                                 <!-- Price item -->
                                 <td th:utext="'$' + ${course.price}"></td>
                                 <!--is free-->
@@ -134,14 +137,12 @@
                                 </td>
                                 <!-- Action item -->
                                 <td>
-                                    <a href="#" class="btn btn-sm btn-success-soft btn-round me-1 mb-0"><i
-                                            class="far fa-fw fa-edit"></i></a>
+                                    <a href="#" class="btn btn-sm btn-success-soft btn-round me-1 mb-0" title="Edit"
+                                       th:if="${course.status == null}">
+                                        <i class="far fa-fw fa-edit"></i>
+                                    </a>
                                     <button class="btn btn-sm btn-danger-soft btn-round mb-0"><i
                                             class="fas fa-fw fa-times"></i></button>
-                                    <a href="#" class="btn btn-sm btn-info-soft btn-round mb-0 ms-1" title="Edit"
-                                       th:if="${course.status == 'draft'}">
-                                        <i class="fas fa-arrow-right" style="color: #0dcaf0;"></i>
-                                    </a>
                                 </td>
                             </tr>
                             </tbody>
