--- a/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/courseDetailContent.html
@@ -17,6 +17,8 @@
             <div>
               <i class="bi bi-people-fill me-1"></i>
               <span>0 students enrolled</span>
+              <i class="fas fa-signal text-success me-1"></i>
+              <span th:utext="${course.courseLevel}"></span>
             </div>
           </div>
         </div>
@@ -148,6 +150,10 @@
                   <div class="list-group-item d-flex justify-content-between align-items-center">
                     <span><i class="bi bi-tag me-2"></i> Category</span>
                     <span th:utext="${course.category.name}"></span>
+                  </div>
+                  <div class="list-group-item d-flex justify-content-between align-items-center">
+                    <span><i class="fas fa-signal me-2"></i> Skill Level</span>
+                    <span th:utext="${course.courseLevel}"></span>
                   </div>
                   <div class="list-group-item d-flex justify-content-between align-items-center">
                     <span><i class="bi bi-clock me-2"></i> Duration</span>
